2007-11-29  Giorgos Keramidas  <keramida@ceid.upatras.gr>  (tiny change)

	* erc-backend.el, erc.el:
	Parse 307 (nick has identified) responses.

2007-11-15  Juanma Barranquero  <lekktu@gmail.com>

	* erc.el (erc-open):
	* erc-backend.el (define-erc-response-handler):
	* erc-log.el (log):
	* erc-match.el (erc-log-matches): Fix typos in docstrings.

2007-11-11  Michael Olson  <mwolson@gnu.org>

	* erc-autoaway.el (erc-autoaway-possibly-set-away):
	* erc-netsplit.el (erc-netsplit-timer):
	* erc-notify.el (erc-notify-timer):
	* erc-track.el (erc-user-is-active): Only run if we have
	successfully established a connection to the server and have
	logged in.  I suspect that sending messages too soon may make some
	IRC servers not respond well, particularly when the network
	connection is iffy or subject to traffic-shaping.

2007-11-01  Michael Olson  <mwolson@gnu.org>

	* erc-compat.el (erc-set-write-file-functions): New compatibility
	function to set the write hooks appropriately.

	* erc-log.el (erc-log-setup-logging): Use
	erc-set-write-file-functions.  This fixes a byte-compiler warning.

	* erc-stamp.el: Silence byte-compiler warning about
	erc-fill-column.

	* erc.el (erc-with-all-buffers-of-server): Bind the result of
	mapcar to a variable in order to silence a byte-compiler warning.

2007-10-29  Michael Olson  <mwolson@gnu.org>

	* erc-ibuffer.el (erc-modified-channels-alist): Use
	eval-when-compile, and explain why we are doing this.

2007-10-25  Dan Nicolaescu  <dann@ics.uci.edu>

	* erc-ibuffer.el (erc-modified-channels-alist): Pacify
	byte-compiler.

2007-10-13  Glenn Morris  <rgm@gnu.org>

	* erc-track.el (erc-modified-channels-update): Use mapc rather
	than mapcar.

2007-10-12  Diane Murray  <disumu@x3y2z1.net>

	* erc.el (erc-join-channel): Prompt for channel key if C-u or
	another prefix-arg was typed.

	* NEWS: Noted this change.

2007-10-07  Michael Olson  <mwolson@gnu.org>

	* erc.el (erc-cmd-ME'S): New command that handles the case where